Change executor to use virtual thread per task